--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
 body {
   padding: 16px;
   display: flex;
+  row-gap: 32px;
   flex-direction: column;
   align-items: center;
   min-width: 320px;
@@ -49,9 +50,17 @@ h4 {
   color: var(--color-primary);
 }
 
+h4 > b {
+  font-family: var(--font-body), sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  color: var(--color-primary);
+}
+
 #hero {
   display: flex;
   flex-direction: column;
+  align-items: center;
   row-gap: 32px;
 }
 
@@ -73,7 +82,7 @@ h4 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 16px;
+  padding: 16px 32px;
   row-gap: 16px;
   background-color: var(--color-tertiary);
   color: var(--color-primary);
@@ -95,4 +104,29 @@ p.divider {
   background-color: var(--color-primary);
   height: 2px;
   border-radius: 4px;
+}
+
+.description-box > .content {
+  text-align: center;
+}
+
+#gallery {
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
+}
+
+.gallery-box {
+  width: 100%;
+  height: auto;
+  aspect-ratio: 1 / 1;
+  border-radius: 12px;
+  overflow: hidden;
+}
+
+.gallery-box img {
+  width: 100%;
+  height: auto;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
 }
