--- a/style.css
+++ b/style.css
@@ -87,6 +87,13 @@ h4 > b {
   background-color: var(--color-tertiary);
   color: var(--color-primary);
   border-radius: 12px;
+
+  transition: all 0.5s ease-out;
+}
+
+.description-box.fixed {
+  /* position: fixed; */
+  /* top: 0; */
 }
 
 .name-box {
