--- a/style.css
+++ b/style.css
@@ -184,6 +184,7 @@ p.divider {
   height: auto;
   aspect-ratio: 1 / 1;
   object-fit: cover;
+  object-position: center top;
 }
 
 #placeholder {
@@ -207,7 +208,7 @@ p.divider {
   position: absolute;
   bottom: 0;
   color: var(--color-secondary);
-  animation-duration: 1s;
+  animation-duration: 0.5s;
   animation-timing-function: ease-out;
   animation-direction: alternate;
   animation-iteration-count: 2;
@@ -242,60 +243,72 @@ p.divider {
 @keyframes moveStarLeftUp {
   0% {
     transform: rotate(0deg) translateY(0px);
+    opacity: 0;
   }
 
   100% {
     transform: rotate(0.2turn) translateY(-100px);
+    opacity: 1;
   }
 }
 
 @keyframes moveStarRightUp {
   0% {
     transform: rotate(0deg) translateY(0px);
+    opacity: 0;
   }
 
   100% {
     transform: rotate(-0.2turn) translateY(-100px);
+    opacity: 1;
   }
 }
 
 @keyframes moveStarUp {
   0% {
     transform: rotate(0deg) translateY(0px);
+    opacity: 0;
   }
 
   100% {
     transform: translateY(-40px);
+    opacity: 1;
   }
 }
 
 @keyframes moveStarDown {
   0% {
     transform: rotate(0deg) translateY(0px);
+    opacity: 0;
   }
 
   100% {
     transform: translateY(25px);
+    opacity: 1;
   }
 }
 
 @keyframes moveStarLeftDown {
   0% {
     transform: rotate(0deg) translateY(0px);
+    opacity: 0;
   }
 
   100% {
     transform: rotate(0.2turn) translateY(85px);
+    opacity: 1;
   }
 }
 
 @keyframes moveStarRightDown {
   0% {
     transform: rotate(0deg) translateY(0px);
+    opacity: 0;
   }
 
   100% {
     transform: rotate(-0.2turn) translateY(85px);
+    opacity: 1;
   }
 }
 
