--- a/style.css
+++ b/style.css
@@ -87,6 +87,16 @@ a:active {
   color: var(--color-primary);
 }
 
+.top-bar {
+  width: 100%;
+  background-color: var(--color-secondary);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+  z-index: 1;
+}
+
 #hero {
   display: flex;
   flex-direction: column;
@@ -123,7 +133,6 @@ a:active {
   width: 200px;
 
   transition: width 0.5s ease;
-  z-index: 1;
 }
 
 .sticky {
@@ -188,8 +197,7 @@ p.divider {
 }
 
 #placeholder {
-  height: 5ch;
-  display: none;
+  height: 2ch;
 }
 
 #links {
