--- a/style.css
+++ b/style.css
@@ -236,6 +236,13 @@ p.divider {
   position: relative;
   width: fit-content;
   background-color: var(--color-neutral);
+  padding: 8px;
+  transition: all 1s ease-out;
+  border-radius: 4px;
+}
+
+.highlighted {
+  background-color: var(--color-secondary);
 }
 
 .star {
